<resources>
    <string name="app_name">
        Instagram_Clone
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign In </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="take_picture">Take Picture</string>
    <string name="example_alpharius4567">example: alpharius4567</string>
    <string name="example_alpharius_gmail_com">example: alpharius@gmail.com</string>
    <string name="create_a_strong_password">Create a Strong Password.</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name:</string>
    <string name="logout">logout</string>
    <string name="home">home</string>
    <string name="email_address">Email Address:</string>
    <string name="description_caption">Description/Caption</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="homeBotNav">Home</string>
    <string name="ducks_like_bread">Ducks like bread.</string>
    <string name="_8hrs_ago">8hrs ago</string>
    <string name="user">User</string>
    <string name="i_am_a_duck_i_like_bread">I am a duck. I like Bread</string>
    <string name="compose">Compose</string>
</resources>
