<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signupForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView

        android:id="@+id/signupLogo"
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:backgroundTint="@color/black"
        android:padding="10dp"
        android:tint="@color/black"
        app:srcCompat="@drawable/nux_dayone_landing_logo" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/signupUserLabel"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:text="@string/user_name"
        android:textSize="25sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/signupUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_alpharius4567"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textSize="25sp" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/signupEmailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:text="@string/email_address"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_alpharius_gmail_com"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textSize="25sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/signupPassLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:text="@string/prompt_password"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled ="true">
        <EditText
            android:id="@+id/composedPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_a_strong_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textSize="25sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signupBtn"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textStyle="bold" />

</LinearLayout>